samples/_failures_safe/1761350088_8f20ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b17a0d3.c: In function ‘main’:
./samples/SAFE/__tmp_2b17a0d3.c:164:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  164 |     TokenStack* stack
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_2b17a0d3.c:164:5: error: expected declaration or statement at end of input
